--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,11 @@
     <div class="container">
         <div class="row align-items-center min-vh-100">
             <div class="col-lg-6 hero-content">
-                <div class="hero-badge">
+                <!-- <div class="hero-badge">
                     <span class="badge-text">At the forefront of</span>
                     <span class="badge-highlight">virtual reality</span>
                     <span class="badge-text">innovation</span>
-                </div>
+                </div> -->
                 
                 <h1 class="modern-hero-title">
                     Revolutionary<br>
@@ -48,7 +48,7 @@
                 </div>
                 
                 <div class="hero-actions">
-                    <a href="{{ url_for('download_apk') }}" class="btn-modern-primary">
+                    <a href="https://github.com/shubhmrj/XR-Web-APP/releases/download/v1.0.0/app.py" class="btn-modern-primary">
                         <i class="fas fa-download"></i>
                         Download APK
                     </a>
@@ -128,7 +128,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="stat-item">
                     <span class="stat-number">100K+</span>
-                    <span class="stat-label">Students Worldwide</span>
+                    <span class="stat-label">Target Students </span>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
